test/files/invalid/rpc_service_as_type.stderr
error: Rpc services are not currently supported
  ┌─ test/files/invalid/rpc_service_as_type.fbs:5:1
  │
5 │ rpc_service Bar {
  │ ^^^^^^^^^^^^^^^

error: Cannot use the RpcService Bar in a type context
  ┌─ test/files/invalid/rpc_service_as_type.fbs:2:6
  │
2 │   x: Bar;
  │      ^^^ Rpc services cannot be used as types
  ·
5 │ rpc_service Bar {
  │ --------------- Service was defined here

Error: Bailing because of errors
